--- a/contact.html
+++ b/contact.html
@@ -439,32 +439,50 @@
                 </label>
             </div>
 
-            
             <div id="graphicDesignSection" style="display: none;">
-                <label class="form-label mt-3">Graphic Design Services</label>
+                <!-- Design Services Dropdown -->
+                <label class="form-label mt-3">Which Design Service?</label>
                 <select class="form-control">
-                    <option value="">Select Option</option>
+                    <option value="">Select a design type</option>
+                    <option>Logo Design</option>
                     <option>Business Cards</option>
-                    <option>Flyers</option>
-                    <option>Brochures</option>
-                    <option>Logos</option>
-                    <option>Menus</option>
-                    <option>Posters</option>
-                    <option>Packaging Design</option>
-                    <option>Labels & Stickers</option>
+                    <option>Email Signature</option>
+                    <option>Brand Kit</option>
+                    <option>Social Media Templates</option>
+                    <option>Instagram/Facebook Post Design</option>
+                    <option>Reel Covers / Story Highlights</option>
+                    <option>YouTube Thumbnail</option>
+                    <option>Twitch Overlay / Streaming Kit</option>
+                    <option>Flyers / Posters</option>
+                    <option>Brochures / Booklets</option>
+                    <option>Roll-up Banner / Billboard</option>
+                    <option>Product Packaging / Label Design</option>
+                    <option>T-Shirt / Hoodie / Merch Design</option>
+                    <option>Embroidery Vector Design</option>
+                    <option>Website Banners / Icons / UI</option>
+                    <option>App UI Concept Design</option>
+                    <option>Animated Logo (3–5 sec)</option>
+                    <option>GIFs / Promo Loops</option>
+                    <option>YouTube Intro/Outro</option>
+                    <option>Landing Page Visual Design</option>
+                    <option>Other / Custom</option>
                 </select>
 
-                <!--Graphic Design Package Section -->
-                <label class="form-label mt-3">Which Package?</label>
+                <!-- Design Package Selection -->
+                <label class="form-label mt-3">Select a Package (optional)</label>
                 <select class="form-control mb-3">
-                    <option>Essential Identity</option>
-                    <option>Growth Visuals</option>
-                    <option>Premium Brand Kit</option>
+                    <option value="">Choose a package</option>
+                    <option>Essential Identity – R1500</option>
+                    <option>Growth Visuals – R2800</option>
+                    <option>Premium Brand Kit – R4900</option>
+                    <option>Launch Pro Kit – R9500</option>
                 </select>
 
-                <label class="form-label mt-3">What do you need designed?</label>
-                <textarea class="form-control" rows="3"></textarea>
+                <!-- Message Area -->
+                <label class="form-label mt-3">Tell us what you need designed</label>
+                <textarea class="form-control" rows="3" placeholder="Describe your project or design goals here..."></textarea>
             </div>
+
 
             <!--Social Media Package Section -->
             <div class="form-check glow-green">
