--- a/graphicdesign.html
+++ b/graphicdesign.html
@@ -330,101 +330,176 @@
         </div>
     </section>
 
-
-    <!-- Graphic Design Section -->
+    <!-- Graphic Design Overview -->
     <section class="container py-5">
         <div class="feature-box p-4 mb-5">
             <h2 class="mb-3 glow-cyan">Graphic Design</h2>
-            <p>From striking social media posts to high-impact corporate identity, our designs spark attention and build brand recognition.</p>
+            <p>From striking social media posts to full branding kits, Slabbion delivers premium graphic solutions for individuals, businesses, and agencies.</p>
             <ul class="list-unstyled mt-3">
-            <li>🔥 Logo & Brand Kits</li>
-            <li>🎨 Posters, Flyers, Brochures</li>
-            <li>📱 Social Media Graphics</li>
-            <li>📦 Product Packaging</li>
+                <li>🔥 Logos, Branding & Corporate Identity</li>
+                <li>🎨 Flyers, Posters, Brochures & Billboards</li>
+                <li>📱 Social Media Kits & Content Templates</li>
+                <li>🧥 Merch, Clothing Art, & Print-Ready Graphics</li>
+                <li>💻 Web Banners, App UI, Icons & Motion Design</li>
             </ul>
-            <p class="mt-4">Need a bold visual edge? Let <span class="glow-green">Slabbion</span> make your brand unforgettable.</p>
+            <p class="mt-4">Need high-impact visuals? Let <span class="glow-green">Slabbion</span> make your brand unforgettable.</p>
         </div>
     </section>
 
-    <!-- Graphic Design Packages Section -->
+    <!-- Graphic Design Packages -->
     <section id="design-packages" class="py-5 bg-dark text-white">
         <div class="container">
             <div class="text-center mb-5">
-                <h2 class="section-title glow-cyan">Graphic Design Packages</h2>
-                <p class="lead">
-                    Whether you're launching a new brand, boosting your product appeal, or refreshing your visuals — these design packages are crafted to spark recognition and drive results.
-                </p>
+            <h2 class="section-title glow-cyan">Graphic Design Packages</h2>
+            <p class="lead">
+                Whether you're launching a brand, refreshing visuals, or building campaigns — these packages are built to scale with your vision.
+            </p>
             </div>
 
             <div class="row justify-content-center">
-                <!-- Essential Identity -->
-                <div class="col-lg-4 col-md-6 mb-4">
-                    <div class="feature-box text-center h-100 p-4 border rounded shadow-sm bg-secondary">
-                    <i class="fas fa-pen-nib fa-3x mb-3 text-light"></i>
-                    <h4 class="mb-2">Essential Identity</h4>
-                    <p>💲TBD<br>
-                        Foundational branding tools to give your business a clean, consistent visual voice.
-                    </p>
-                    <ul class="list-unstyled small mb-3 text-start">
-                        <li>✅ Logo Design (3 initial concepts)</li>
-                        <li>✅ Typography & Color Palette</li>
-                        <li>✅ Business Card & Email Signature</li>
-                        <li>✅ Social Profile Branding (IG/FB)</li>
-                        <li>✅ 1 Revision Round</li>
-                    </ul>
-                    <a href="contact.html#contact" class="btn btn-outline-light">Build My Identity</a>
-                    </div>
-                </div>
-
-                <!-- Growth Visuals -->
-                <div class="col-lg-4 col-md-6 mb-4">
-                    <div class="feature-box text-center h-100 p-4 border rounded shadow-sm bg-secondary">
-                    <i class="fas fa-layer-group fa-3x mb-3 text-success"></i>
-                    <h4 class="mb-2">Growth Visuals</h4>
-                    <p>💲TBD<br>
-                        Polished graphics for digital & print that support your marketing and content goals.
-                    </p>
-                    <ul class="list-unstyled small mb-3 text-start">
-                        <li>✅ Everything in Essential</li>
-                        <li>✅ 8–10 Social Media Templates</li>
-                        <li>✅ 3 Print Assets (Flyers, Posters, etc.)</li>
-                        <li>✅ Product Mockups or Packaging</li>
-                        <li>✅ 2 Revision Rounds</li>
-                    </ul>
-                    <a href="contact.html#contact" class="btn btn-outline-success">Upgrade My Visuals</a>
-                    </div>
-                </div>
-
-                <!-- Premium Brand Kit -->
-                <div class="col-lg-4 col-md-6 mb-4">
-                    <div class="feature-box text-center h-100 p-4 border rounded shadow-sm bg-secondary">
-                    <i class="fas fa-crown fa-3x mb-3 text-warning"></i>
-                    <h4 class="mb-2">Premium Brand Kit</h4>
-                    <p>💲TBD<br>
-                        Complete design system, packaging strategy, and campaign-level design consultation.
-                    </p>
-                    <ul class="list-unstyled small mb-3 text-start">
-                        <li>✅ Everything in Growth</li>
-                        <li>✅ Full Brand Guidelines PDF</li>
-                        <li>✅ Packaging Set (Box, Label, Insert)</li>
-                        <li>✅ Custom Campaign Graphics (Launch/Event)</li>
-                        <li>✅ Visual Strategy Session</li>
-                    </ul>
-                    <a href="contact.html#contact" class="btn btn-outline-warning">Go Premium</a>
-                    </div>
+            <!-- Essential Identity -->
+            <div class="col-lg-3 col-md-6 mb-4">
+                <div class="feature-box text-center h-100 p-4 border rounded shadow-sm bg-secondary">
+                <i class="fas fa-pen-nib fa-2x mb-3 text-light"></i>
+                <h5 class="mb-2">Essential Identity</h5>
+                <p class="small">💲R1500<br>
+                    Clean, professional brand starter kit.
+                </p>
+                <ul class="list-unstyled small text-start mb-3">
+                    <li>✔ Logo + 3 Concepts</li>
+                    <li>✔ Colors & Typography</li>
+                    <li>✔ Business Card + Email Signature</li>
+                    <li>✔ IG/FB Profile Branding</li>
+                </ul>
+                <a href="contact.html#contact" class="btn btn-outline-light btn-sm">Start Now</a>
                 </div>
             </div>
 
-            <!-- Graphic Design Notes -->
-            <div class="text-center mt-4">
-                <p>
-                    <strong>Note:</strong> We do not offer illustration or animation at this time. Our focus is strong commercial graphics, branding kits, and content-ready visuals that you can use anywhere.
+            <!-- Growth Visuals -->
+            <div class="col-lg-3 col-md-6 mb-4">
+                <div class="feature-box text-center h-100 p-4 border rounded shadow-sm bg-secondary">
+                <i class="fas fa-layer-group fa-2x mb-3 text-success"></i>
+                <h5 class="mb-2">Growth Visuals</h5>
+                <p class="small">💲R2800<br>
+                    Boost your visual footprint with digital & print.
                 </p>
+                <ul class="list-unstyled small text-start mb-3">
+                    <li>✔ All from Essential</li>
+                    <li>✔ 10 Social Media Templates</li>
+                    <li>✔ 3 Print Items (Flyers, Brochures, etc.)</li>
+                    <li>✔ 2 Revisions</li>
+                </ul>
+                <a href="contact.html#contact" class="btn btn-outline-success btn-sm">Upgrade</a>
+                </div>
+            </div>
+
+            <!-- Premium Brand Kit -->
+            <div class="col-lg-3 col-md-6 mb-4">
+                <div class="feature-box text-center h-100 p-4 border rounded shadow-sm bg-secondary">
+                <i class="fas fa-crown fa-2x mb-3 text-warning"></i>
+                <h5 class="mb-2">Premium Brand Kit</h5>
+                <p class="small">💲R4900<br>
+                    Motion, packaging & visual strategy.
+                </p>
+                <ul class="list-unstyled small text-start mb-3">
+                    <li>✔ All from Growth</li>
+                    <li>✔ Animated Logo (3–5 sec)</li>
+                    <li>✔ Brand Guidelines PDF</li>
+                    <li>✔ Custom Campaign Graphics</li>
+                </ul>
+                <a href="contact.html#contact" class="btn btn-outline-warning btn-sm">Go Premium</a>
+                </div>
+            </div>
+
+            <!-- Launch Pro Kit -->
+            <div class="col-lg-3 col-md-6 mb-4">
+                <div class="feature-box text-center h-100 p-4 border rounded shadow-sm bg-secondary">
+                <i class="fas fa-rocket fa-2x mb-3 text-danger"></i>
+                <h5 class="mb-2">Launch Pro Kit</h5>
+                <p class="small">💲R9500<br>
+                    The complete package — ready to launch.
+                </p>
+                <ul class="list-unstyled small text-start mb-3">
+                    <li>✔ Premium Kit Included</li>
+                    <li>✔ 3 Promo Reels / Animated Clips</li>
+                    <li>✔ Landing Page Visual Design</li>
+                    <li>✔ 30 Social Templates + 1 Month Support</li>
+                </ul>
+                <a href="contact.html#contact" class="btn btn-outline-danger btn-sm">Launch My Brand</a>
+                </div>
+            </div>
+            </div>
+
+            <!-- Business Retainer Services -->
+            <div class="text-center mt-5">
+            <h4 class="mb-3 glow-cyan">Business Support Plans</h4>
+            <p class="small">🎯 Monthly retainers for brands, agencies, and creators needing consistent, on-demand visuals.</p>
+            <ul class="list-inline small">
+                <li class="list-inline-item">📦 R1200/month (5 designs)</li>
+                <li class="list-inline-item">📦 R2200/month (10 designs)</li>
+                <li class="list-inline-item">📦 R3500/month (Unlimited basic designs*)</li>
+                <li class="list-inline-item">⚡ Urgent Add-on: +R150</li>
+            </ul>
+            <p class="small text-muted">*Fair use applies (up to 2 designs/day)</p>
+            <a href="contact.html#contact" class="btn btn-outline-info btn-sm mt-2">Request Business Support</a>
             </div>
         </div>
     </section>
 
-        <!-- IMAGE SCROLLER -->
+
+    <!-- Full Service Breakdown (Optional: Hidden or in Modal/Popup) -->
+    <section class="container py-5">
+        <div class="feature-box p-4">
+            <h2 class="glow-cyan mb-4">Full Graphic Services List</h2>
+
+            <div class="row">
+                <div class="col-md-6">
+                    <h5 class="glow-green">Social Media & Digital</h5>
+                    <ul>
+                        <li>Instagram / Facebook Post Templates – R300 (Set of 3)</li>
+                        <li>Reel Covers / Story Highlights – R150</li>
+                        <li>YouTube Thumbnails – R100</li>
+                        <li>Twitch Overlays – R750</li>
+                    </ul>
+
+                    <h5 class="glow-green mt-4">Motion & Video</h5>
+                    <ul>
+                        <li>Animated Logo (3–5 sec) – R1200</li>
+                        <li>GIF Loops – R400</li>
+                        <li>YouTube Intro/Outro (Static) – R350</li>
+                        <li>YouTube Intro/Outro (Animated) – R950</li>
+                    </ul>
+                </div>
+
+                <div class="col-md-6">
+                    <h5 class="glow-green">Print & Merch</h5>
+                    <ul>
+                        <li>Flyers / Posters – R300–R400</li>
+                        <li>Brochures / Booklets – R500–R1200</li>
+                        <li>T-Shirt / Hoodie / Cap Design – R180–R250</li>
+                        <li>Packaging / Label Art – R400</li>
+                        <li>Embroidery Vector – R350</li>
+                    </ul>
+
+                    <h5 class="glow-green mt-4">Web & UI</h5>
+                    <ul>
+                        <li>Website Banners / Headers – R250</li>
+                        <li>Icon Pack (5x Custom) – R150</li>
+                        <li>App UI Concepts – From R950</li>
+                        <li>Landing Page Visuals – R700</li>
+                    </ul>
+                </div>
+            </div>
+
+            <p class="mt-4 text-center"><strong>Need something custom?</strong> Let’s make it happen — contact us below!</p>
+            <div class="text-center">
+                <a href="contact.html#contact" class="btn btn-outline-light">Talk to Slabbion</a>
+            </div>
+        </div>
+    </section>
+
+
+    <!-- IMAGE SCROLLER -->
     <section id="image-scroller">
         <!-- CAROUSEL SCROLLER -->
         <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
@@ -540,62 +615,71 @@
         </div>
     </section>
 
-    <!-- Graphic Design Services Section -->
+    <!-- Graphic Design Services Overview -->
     <section class="container py-5">
         <div class="feature-box p-4 mb-5">
             <h2 class="mb-3 glow-cyan">What We Design</h2>
             <p class="lead font-weight-bold">
-            Every pixel, shape, and line crafted with intention. Our design arsenal turns ideas into stunning visuals that connect, convert, and leave lasting impressions.
+            Every line, icon, and color crafted with purpose. Slabbion designs are built to *connect, convert,* and impress.
             </p>
 
             <div class="row mt-4">
+            <!-- Branding -->
             <div class="col-md-6 mb-4">
                 <div class="p-3 border rounded bg-dark text-light h-100">
-                <h5 class="glow-cyan mb-2">🔥 Branding Essentials</h5>
+                <h5 class="glow-cyan mb-2">🔥 Branding & Identity</h5>
                 <ul class="list-unstyled">
-                    <li>✅ Logo Design & Typography</li>
-                    <li>✅ Brand Guidelines & Color Palettes</li>
-                    <li>✅ Business Cards & Stationery</li>
+                    <li>✅ Logo Design (Flat, 3D, Animated)</li>
+                    <li>✅ Typography + Color Palette</li>
+                    <li>✅ Business Cards & Brand Guides</li>
                 </ul>
                 </div>
             </div>
+
+            <!-- Social Media -->
             <div class="col-md-6 mb-4">
                 <div class="p-3 border rounded bg-dark text-light h-100">
-                <h5 class="glow-cyan mb-2">📱 Social Impact Visuals</h5>
+                <h5 class="glow-cyan mb-2">📱 Social Media Visuals</h5>
                 <ul class="list-unstyled">
-                    <li>✅ Instagram + TikTok Post Templates</li>
-                    <li>✅ Stories, Reels & Cover Graphics</li>
-                    <li>✅ Carousel Design Strategy</li>
+                    <li>✅ IG & TikTok Templates</li>
+                    <li>✅ Stories, Reels Covers, Highlights</li>
+                    <li>✅ YouTube Thumbnails & Banners</li>
                 </ul>
                 </div>
             </div>
+
+            <!-- Print & Packaging -->
             <div class="col-md-6 mb-4">
                 <div class="p-3 border rounded bg-dark text-light h-100">
-                <h5 class="glow-cyan mb-2">🎨 Print & Campaigns</h5>
+                <h5 class="glow-cyan mb-2">🎨 Print & Packaging</h5>
                 <ul class="list-unstyled">
-                    <li>✅ Posters, Flyers, Brochures</li>
-                    <li>✅ Event & Product Launch Packs</li>
-                    <li>✅ Packaging That Pops</li>
+                    <li>✅ Flyers, Posters, Brochures</li>
+                    <li>✅ Product Labels & Box Design</li>
+                    <li>✅ Event or Billboard Graphics</li>
                 </ul>
                 </div>
             </div>
+
+            <!-- Strategy -->
             <div class="col-md-6 mb-4">
                 <div class="p-3 border rounded bg-dark text-light h-100">
-                <h5 class="glow-cyan mb-2">🚀 Visual Strategy Consulting</h5>
+                <h5 class="glow-cyan mb-2">🚀 Visual Strategy</h5>
                 <ul class="list-unstyled">
-                    <li>✅ Campaign Design Direction</li>
-                    <li>✅ Brand Voice & Consistency</li>
-                    <li>✅ Style Alignment Audit</li>
+                    <li>✅ Design Direction Consulting</li>
+                    <li>✅ Brand Consistency Audit</li>
+                    <li>✅ Campaign Visual Planning</li>
                 </ul>
                 </div>
             </div>
             </div>
 
-            <p class="lead font-weight-bold">Want designs that make people stop scrolling? Let's create your next visual masterpiece.</p>
+            <p class="lead font-weight-bold mt-4">
+            Want graphics that turn heads and spark clicks? Let’s create your next visual masterpiece.
+            </p>
             <a href="webdevelopment.html#testimonials" class="btn btn-light mt-3 feature-box">See Our Work</a>
         </div>
     </section>
-    
+
     <!-- Footer -->
     <footer class="py-4 text-center footer-glow">
         <div class="container">
