--- a/index.html
+++ b/index.html
@@ -64,9 +64,10 @@
 
         <!-- Video Activate -->
         <div id="start-button-overlay">
+            <audio id="hover-sound" src="sounds/hover.mp3" preload="auto"></audio> 
             <button id="start-button" class="slabbion-glow">
                 <img src="images/SlabbionLogo.png" alt="Slabbion Logo" class="slabbion-logo-inside">
-            </button> 
+            </button>
         </div>
 
         <!-- Intro Video -->
